--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,10 @@ footer{
         margin-left: 5px;
     }
 
+    #segunda-seccion h2{
+        width: 424px;
+    }
+
     #tercera-seccion h3{
         height: 50px;
         font-size: 40px;
